Dynamic resizing of images on faculty list based upon current selection. Fixed carousel arrows overlapping on navbar.

--- a/Phase3/Final/faculty/facultylist.css
+++ b/Phase3/Final/faculty/facultylist.css
@@ -153,7 +153,7 @@ h3 {
     width: 10%;
     text-align: center;
     font-size: 500%;
-    z-index: 2;
+    z-index: 1;
     cursor: pointer;
 }
 
@@ -163,6 +163,6 @@ h3 {
     width: 10%;
     text-align: center;
     font-size: 500%;
-    z-index: 2;
+    z-index: 1;
     cursor: pointer;
 }
