--- a/Phase3/Final/navbar.css
+++ b/Phase3/Final/navbar.css
@@ -166,7 +166,7 @@ header h2, header h4, header h5 {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     left: 0;
     background-color: #111;
